project_chart/templates/deployment-webdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb
  namespace: qflamarion
  labels:
    app: webdb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
        - name: webdb
          image: quentinfl/webdb:v2
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 41
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "200m"
