project_chart/templates/deployment-webnodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnodb
  namespace: qflamarion
  labels:
    app: webnodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webnodb
  template:
    metadata:
      labels:
        app: webnodb
    spec:
      containers:
        - name: webnodb
          image: quentinfl/webnodb:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "200m"
