project_chart/templates/service-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: qflamarion
  labels:
    app: mongodb
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
