project_chart/templates/service-webdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: qflamarion
spec:
  type: ClusterIP
  selector:
    app: webdb
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
