project_chart/templates/service-webnodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: webnodb-service
  namespace: qflamarion
spec:
  selector:
    app: webnodb
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
