project_chart/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-restrict
  namespace: qflamarion
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: webdb
        - podSelector:
            matchLabels:
              app: webnodb
        - podSelector:
            matchLabels:
              app: mongodb

      ports:
        - protocol: TCP
          port: 27017
